<resources>
    <string name="app_name">Timetable</string>
    <string name="room">Room</string>
    <string name="module_code">Module Code</string>
    <string name="Addbutton">Add To Timetable</string>
    <string name="RemoveButton">Remove From Timetable</string>
    <string name="HomeRemove">Remove From Timetable</string>
    <string name="HomeAdd">Add New Class</string>
    <string name="HomeView">View Class</string>
    <string name="selCont">Select a class:</string>
    <string name="day_select">Input Day (first letter capital)</string>
    <string name="start_time">Start Time</string>
    <string name="duration">Duration (hours)</string>
    <string name="session_type">Lecture, Practical or Seminar (lower case)</string>
    <string name="entry_intro">Please enter the details of the class you wish to add to your timetable</string>
</resources>
