<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.example.ancho.mobtimetable.deleteTimeTable">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_code"
        tools:text="@string/module_code" />

    <TextView
        android:id="@+id/code_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30px" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day_select"
        tools:text="@string/day_select" />

    <TextView
        android:id="@+id/day_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30px" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        tools:text="@string/start_time" />

    <TextView
        android:id="@+id/time_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30px" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        tools:text="@string/duration" />

    <TextView
        android:id="@+id/duration_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30px" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_type"
        tools:text="@string/session_type" />

    <TextView
        android:id="@+id/type_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30px" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room"
        tools:text="@string/room" />

    <TextView
        android:id="@+id/room_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/remove"
        style="@style/Buttons"

        android:background="@color/colorHeader"
        android:text="@string/RemoveButton"

        android:textColor="@color/textHeader"


        />
</LinearLayout>