<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.ancho.mobtimetable.TimeTable">

    <Button
        android:id="@+id/viewTimeTable"
        style="@style/Buttons"

        android:layout_marginBottom="20dp"
        android:background="@color/colorHeader"
        android:text="@string/HomeView"
        android:textColor="@color/textHeader"


        />

    <Button
        android:id="@+id/remove"
        style="@style/Buttons"
        android:layout_marginBottom="20dp"
        android:background="@color/colorHeader"
        android:text="@string/HomeRemove"
        android:textColor="@color/textHeader"


        />

    <Button
        android:id="@+id/add"
        style="@style/Buttons"

        android:background="@color/colorHeader"
        android:text="@string/HomeAdd"
        android:textColor="@color/textHeader"


        />

</LinearLayout>